--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,31 @@
-
- <h3 class="ui center aligned header">
-  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-      <div class="ui segment"><img class="img-responsive" src="/images/logview.png"/></div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        <section class="login">
-			  <form class="login-form"><br>
-				<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
-				<div class="form-group">
-					<h3><label for="username-login"> Username:</label></h3>
-					<input type="text" id="username-login" type="text" class="form-control" placeholder="Username" />
-				</div>
-				<div class="form-group">
-					<label for="password-login">
-						<h3>Password:</h3>
-					</label>
-					<input type="password" class="form-control" id="password-login" placeholder="Password" />
-				</div>
-				<button class="ui fluid large teal submit button" type="submit">
-					<h3> Sign in </h3>
-				</button>
-				<br />
-				<a href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
-			</form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
- </div>
+<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+	<div class="column">
+		<div class="ui segment"><img class="img-responsive" src="/images/logview.png" /></div>
+	</div>
+	<div class="column">
+		<div class="ui segment">
+			<section class="login">
+				<form class="login-form"><br>
+					<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
+					<div class="form-group">
+						<h3><label for="username-login"> Username:</label></h3>
+						<input type="text" id="username-login" type="text" class="form-control"
+							placeholder="Username" />
+					</div>
+					<div class="form-group">
+						<label for="password-login">
+							<h3>Password:</h3>
+						</label>
+						<input type="password" class="form-control" id="password-login" placeholder="Password" />
+					</div>
+					<button class="ui fluid large teal submit button" type="submit">
+						<h3> Sign in </h3>
+					</button>
+					<br />
+					<a href="/sign-up" role="button">Don't have an account yet? Register Here.</a>
+				</form>
+		</div>
+	</div>
 </div>
 
 <script src="/javascript/login.js"></script>
