--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,33 +1,33 @@
-<h3 class="ui center aligned header">
-  <div class="ui stackable two column very relaxed grid container" style="position:relative;">
-    <div class="column">
-      <div class="ui segment"><img class="img-responsive" src="/images/logview.png"/></div>
-    </div>
-    <div class="column">
-      <div class="ui segment">
-        <section class="signup">
-      <form class="signup-form"> <br>
-		   <h3 class="form-signin-heading ui teal image header" >Register your account</h3><br>
-		   <div class="form-group">
-          <label for="username-login"> Username:</label>
-		      <input type="text" id="username-signup"type="text" class="form-control" placeholder="Username" />
-		   </div>
-		   <div class="form-group">
-          <label for="password-signup">
-						<h3>Password:</h3>
-					</label>
-		      <input type="password" class="form-control" id="password-signup" placeholder="Password" />
-		   </div>
-		   <button class="ui fluid large teal submit button" type="submit"><h3> Sign up </h3></button>
-		   <br/>
-		   <a href="/login" role="button">Already have an account? Click here.</a>
-		  </form>
-         </div>
-        </div>
-      </div>
+<div class="ui stackable two column very relaxed grid container" style="position:relative;">
+  <div class="column">
+    <div class="ui segment"><img class="img-responsive" src="/images/logview.png" /></div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <section class="signup">
+        <form class="signup-form"> <br>
+          <h3 class="form-signin-heading ui teal image header">Register your account</h3><br>
+          <p class="hide" id="taken">That username is already taken! Try again.</p>
+          <div class="form-group">
+            <label for="username-login">
+              <h3>Username:</h3>
+            </label>
+            <input type="text" id="username-signup" type="text" class="form-control" placeholder="Username" />
+          </div>
+          <div class="form-group">
+            <label for="password-signup">
+              <h3>Password:</h3>
+            </label>
+            <input type="password" class="form-control" id="password-signup" placeholder="Password" />
+          </div>
+          <button class="ui fluid large teal submit button" type="submit">
+            <h3>Sign up</h3>
+          </button>
+          <br />
+          <a href="/login" role="button">Already have an account? Click here.</a>
+        </form>
     </div>
   </div>
- </div>
 </div>
 
 <script src="/javascript/sign-up.js"></script>
