updated signup and login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,6 +7,7 @@
 			<section class="login">
 				<form class="login-form"><br>
 					<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
+					<p class="hide" id="not-found">That username does not exist! Try again or join.</p>
 					<div class="form-group">
 						<h3><label for="username-login"> Username:</label></h3>
 						<input type="text" id="username-login" type="text" class="form-control"
