--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,8 @@
  * http://opensource.org/licenses/MIT
  *
  */
+
+ #more {display: none;}
  
  *.icon-white {color: white}
  *.icon-silver {color: silver}
@@ -346,7 +348,7 @@ span.emoji {
 } */
 
  /* Tablets */
- @media (max-width: 1024px){
+ @media (max-width: 768px){
 
  h1,
  h2,
@@ -374,11 +376,13 @@ font-family: 'Montserrat';
 }
 
 /* Mobile phones */
-@media (max-width: 480px) {
+@media (max-width: 425px) {
 
+  h3{
+    font-size: 15px !important;
+  }
  h1,
  h2,
- h3,
  h4,
  h5 {
 font-family: 'Montserrat';
@@ -390,8 +394,8 @@ font-family: 'Montserrat';
 
  .nav-sec {
   margin: 10px 10px 10px 10px;
-  padding: 10px;
-  height: 80px;
+  padding: 25px;
+  height: 100px !important;
   border-top: 0px solid grey;
   border-radius: 10px;
   background-color: rgb(83, 83, 83) ;
