--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -57,11 +57,12 @@
                         <h4 class="ui black image header">Comments</h4>
                         {{#each comments as |comment|}}
                         <div>
-                            {{comment.dataValues.comment_text}} by {{comment.dataValues.user.dataValues.username}}
+                            <b>{{comment.dataValues.comment_text}}</b> by
+                            {{comment.dataValues.user.dataValues.username}}
                         </div>
                         {{/each}}
                     </div>
-                    {{#if loggedIn}}
+                    {{!-- {{#if loggedIn}} --}}
                     <form class="comment-form" data-activity-id={{dataValues.id}}>
                         <div>
                             <textarea name="comment-body" class="comment-area form-control" id={{dataValues.id}}
@@ -73,7 +74,7 @@
                                 class="ui fluid large teal submit button">Post</button>
                         </div>
                     </form>
-                    {{/if}}
+                    {{!-- {{/if}} --}}
                     <div id="share-buttons">
                         <a
                             href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/">
