--- a/views/create-activity.handlebars
+++ b/views/create-activity.handlebars
@@ -11,20 +11,19 @@
 
           <h4 class="ui teal image header"><label for="description">Description (required)</label></h4><br>
           <input type="text" id="description" name="description" placeholder="Describe your event..." required><br>
-          {{!-- <textarea rows="4" cols="50" name="description" form="usrform"
-            placeholder="Describe your event..."></textarea><br> --}}
 
           <h4 class="ui teal image header"><label for="image_url">Upload a photo (required)</label></h4><br>
           <input type="file" id="description-bar" name="image_url" required><br>
 
-          <h4 class="ui teal image header"><label for="date">Choose a date for your event: (required)</label></h4>
+          <h4 class="ui teal image header"><label for="date">Choose a date for your event (required)</label></h4>
           <input type="date" id="date" name="date" required><br>
 
-          <h4 class="ui teal image header"><label for="time">Choose a time for your event: (required)</label></h4>
+          <h4 class="ui teal image header"><label for="time">Choose a time for your event (required)</label></h4>
           <input type="time" id="time" name="time" required><br>
 
           <h4 class="ui teal image header"><label for="url">Link (required)</label></h4><br>
-          <input type="url" id="url" name="link" placeholder="Add URL for the virtual meetup" required><br>
+          <input type="url" id="url" name="link" placeholder="Add URL for the virtual meetup or activity location"
+            required><br>
 
           <h4 class="ui teal image header"><label for="quantity">Group Size (required)</label></h4><br>
           <input type="number" id="quantity" name="group_size"
