--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
         rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css">`
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css">
 </head>
 
 <body>
@@ -20,7 +20,6 @@
             </a>
         </nav>
     </header>
-
 
     <section class="nav-sec">
         <div class="d-flex justify-content-between">
@@ -61,7 +60,6 @@
     </section>
 
     <div class="wrapper newsfeed">
-
         <main>
             {{{ body }}}
         </main>
