added comments and removed unncessary files

--- a/views/edit-activity.handlebars
+++ b/views/edit-activity.handlebars
@@ -1,3 +1,4 @@
+{{!-- edit activity form --}}
 <div class="ui middle aligned center aligned grid">
   <div class="column">
     <a href="/my-activities"> &larr; Back to my activites</a>
@@ -26,5 +27,6 @@
 </div>
 </div>
 
+{{!-- javascript imports --}}
 <script src="/javascript/edit-activity.js"></script>
 <script src="/javascript/delete-activity.js"></script>
