--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,8 +5,10 @@
 	<div class="column">
 		<div class="ui segment">
 			<section class="login">
+				{{!-- login form --}}
 				<form class="login-form"><br>
 					<h3 class="form-signin-heading ui teal image header">Login to your account</h3><br>
+					{{!-- if username does not exist show message --}}
 					<p class="hide" id="not-found">That username does not exist! Try again or join.</p>
 					<div class="form-group">
 						<h3><label for="username-login"> Username:</label></h3>
