--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,413 +1,400 @@
- /*!
- * # Semantic UI 2.4.2 - Site
- * http://github.com/semantic-org/semantic-ui/
- *
- *
- * Released under the MIT license
- * http://opensource.org/licenses/MIT
- *
- */
+/*!
+* # Semantic UI 2.4.2 - Site
+* http://github.com/semantic-org/semantic-ui/
+*
+*
+* Released under the MIT license
+* http://opensource.org/licenses/MIT
+*
+*/
 
- #more {display: none;}
- 
- *.icon-white {color: white}
- *.icon-silver {color: silver}
+/* icon formatting */
+*.icon-white {
+	color: white;
+}
+*.icon-silver {
+	color: silver;
+}
 
- a:hover {
-  background-color: #00B5AD;
-  height: 100%;
-  width: 100%;
-  border-radius: 50px;
+/* link hover */
+a:hover {
+	background-color: #00b5ad;
+	height: 100%;
+	width: 100%;
+	border-radius: 50px;
 }
 
 .m-0 {
-  color: #444444;
-}
-   /* header */
- /*--- Teal ---*/
-  
- .ui.color.header {
-  font-family: 'Montserrat';
-  background: linear-gradient(to right, #C15858 0%, #3C55FF 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
- }
-
- .ui.white.header {
-  font-family: 'Montserrat';
-  color: white !important;
-  }
-  
- .ui.teal.header {
-  font-family: 'Montserrat';
-  color: #00B5AD !important;
-  }
-  a.ui.teal.header:hover {
-    font-family: 'Montserrat';
-  color: #009c95 !important;
-  }
-  .ui.teal.dividing.header {
-  font-family: 'Montserrat';
-  border-bottom: 0px solid #00B5AD;
-  }
-
-  .navbar-brand {
-    font-family: 'Montserrat';
-    font-size: 40px;
-      background: linear-gradient(to left, #30CFD0 0%, #330867 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-   }
-
-  #category-header {
-    padding-top:10px;
-    font-family: 'Montserrat';
-    font-size: 20px;
-      /* background: linear-gradient(to right, #C15858 0%, #100%); */
-      background: linear-gradient(to left, red,orange,green,blue,indigo);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-  }
- .ui-segment {
-  position: relative;
-  background: #f4f4f4;
-  -webkit-box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15);
-         box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15);
-  margin: 0rem 0em;
-  padding: 0em 0em;
-  border-radius: 0.28571429rem;
-  border: 1px solid rgba(34, 36, 38, 0.15);
-  width: 100%;
-  }
- 
-  
- /*******************************
-           Page
- *******************************/
-
- .postbox{
-  margin: auto;
-  width: 100%;
-  padding: 10px;
-  border-radius: 20px;
-  background-color: #fff;
-  margin-bottom: 20px;
- }
-  
- /* @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin'); */
- html,
- body {
- height: 100%;
- }
- html {
- font-size: 14px;
- }
- body {
- margin: 0px;
- padding: 0px;
- overflow-x: hidden;
- min-width: 320px;
- background: #FFFFFF;
-font-family: 'Montserrat' !important;
-font-size:40px;
- }
-
- .w100 {
-  font-weight: 100;
- font-size: 14px;
- line-height: 1.4285em;
- color: rgba(0, 0, 0, 0.87);
- }
-
- h1,
- h2,
- h3,
- h4,
- h5 {
-font-family: 'Montserrat';
- line-height: 1.28571429em;
- margin: calc(1rem -  0.14285714em ) 0em 0.2rem;
- font-weight: bold;
- padding: 0em;
- }
-
-
- p {
-  margin: 0em 0em 1em;
-  line-height: 1.4285em;
-  }
-
-  a {
-    color: #4183C4;
-    text-decoration: none;
-    }
-    a:hover {
-    color: #1e70bf;
-    text-decoration: none;
-    }
- 
- /* button */
- .ui.fluid.buttons,
- .ui.fluid.button {
- width: 100% !important;
- margin:5px;
- }
-
- .button-1
- {
- background-color: #00B5AD;
- color: #FFFFFF;
- text-shadow: none;
- background-image: none;
- border-radius: 20px;
- padding: 10px 30px;
- margin:5px;
- }
-
- .button
- {
- background-color: #fff;
- color: #FFFFFF;
- text-shadow: none;
- background-image: none;
- border-radius: 10px;
- padding: 12px 22px;
- }
- .button {
- -webkit-box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-        box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
- }
-
- .ui.segment {
-  position: relative;
-  background: #ffffff;
-  /* -webkit-box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15);
-         box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15); */
-  margin: 1rem 1em;
-  padding: 1em 1em;
-  /* border-radius: 0.28571429rem;
-  border: 1px solid rgba(34, 36, 38, 0.15); */
-  }
-  .ui.segment:first-child {
-  margin-top: 1em;
-  }
-  .ui.segment:last-child {
-  margin-bottom: 0em;
-  }
-
- .ui.grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-     -ms-flex-direction: row;
-         flex-direction: row;
-  -ms-flex-wrap: wrap;
-     flex-wrap: wrap;
-  -webkit-box-align: stretch;
-     -ms-flex-align: stretch;
-         align-items: stretch;
-  padding: 0em;
-  }
-
-  .navbar.navbar-default {
-    margin-bottom: 0;
-    border-radius: 0;
-    border: 0;
-    background-color: #f4f4f4;;
-  box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.2);
- }
-
- .navbar-default .navbar-nav li a{
-  text-decoration: none;
-  font-family: 'Montserrat';
-  color: #ffffff;
-  font-size: 14px;
-  text-transform: uppercase;
-  border-radius: 4px;
-  margin-right: 2px;
-  -webkit-transition-duration: 0;
-  transition-duration: 0;
+	color: #444444;
 }
 
+/* header */
+/*--- Teal ---*/
+
+.ui.color.header {
+	font-family: 'Montserrat';
+	background: linear-gradient(to right, #c15858 0%, #3c55ff 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.ui.white.header {
+	font-family: 'Montserrat';
+	color: white !important;
+}
+
+.ui.teal.header {
+	font-family: 'Montserrat';
+	color: #00b5ad !important;
+}
+a.ui.teal.header:hover {
+	font-family: 'Montserrat';
+	color: #009c95 !important;
+}
+.ui.teal.dividing.header {
+	font-family: 'Montserrat';
+	border-bottom: 0px solid #00b5ad;
+}
+
+.navbar-brand {
+	font-family: 'Montserrat';
+	font-size: 40px;
+	background: linear-gradient(to left, #30cfd0 0%, #330867 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+#category-header {
+	padding-top: 10px;
+	font-family: 'Montserrat';
+	font-size: 20px;
+	/* background: linear-gradient(to right, #C15858 0%, #100%); */
+	background: linear-gradient(to left, red, orange, green, blue, indigo);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+.ui-segment {
+	position: relative;
+	background: #f4f4f4;
+	-webkit-box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15);
+	box-shadow: 0px 0px 2px 0 rgba(34, 36, 38, 0.15);
+	margin: 0rem 0em;
+	padding: 0em 0em;
+	border-radius: 0.28571429rem;
+	border: 1px solid rgba(34, 36, 38, 0.15);
+	width: 100%;
+}
+
+/*******************************
+          Page
+*******************************/
+
+.postbox {
+	margin: auto;
+	width: 100%;
+	padding: 10px;
+	border-radius: 20px;
+	background-color: #fff;
+	margin-bottom: 20px;
+}
+
+/* @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin'); */
+html,
+body {
+	height: 100%;
+}
+html {
+	font-size: 14px;
+}
+body {
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+	min-width: 320px;
+	background: #ffffff;
+	font-family: 'Montserrat' !important;
+	font-size: 40px;
+}
+
+.w100 {
+	font-weight: 100;
+	font-size: 14px;
+	line-height: 1.4285em;
+	color: rgba(0, 0, 0, 0.87);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: 'Montserrat';
+	line-height: 1.28571429em;
+	margin: calc(1rem - 0.14285714em) 0em 0.2rem;
+	font-weight: bold;
+	padding: 0em;
+}
+
+p {
+	margin: 0em 0em 1em;
+	line-height: 1.4285em;
+}
+
+a {
+	color: #4183c4;
+	text-decoration: none;
+}
+a:hover {
+	color: #1e70bf;
+	text-decoration: none;
+}
+
+/* button */
+.ui.fluid.buttons,
+.ui.fluid.button {
+	width: 100% !important;
+	margin: 5px;
+}
+
+.button-1 {
+	background-color: #00b5ad;
+	color: #ffffff;
+	text-shadow: none;
+	background-image: none;
+	border-radius: 20px;
+	padding: 10px 30px;
+	margin: 5px;
+}
+
+.button {
+	background-color: #fff;
+	color: #ffffff;
+	text-shadow: none;
+	background-image: none;
+	border-radius: 10px;
+	padding: 12px 22px;
+}
+.button {
+	-webkit-box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+	box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+}
+
+.ui.segment {
+	position: relative;
+	background: #ffffff;
+	margin: 1rem 1em;
+	padding: 1em 1em;
+}
+.ui.segment:first-child {
+	margin-top: 1em;
+}
+.ui.segment:last-child {
+	margin-bottom: 0em;
+}
+
+.ui.grid {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: row;
+	flex-direction: row;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	padding: 0em;
+}
+
+.navbar.navbar-default {
+	margin-bottom: 0;
+	border-radius: 0;
+	border: 0;
+	background-color: #f4f4f4;
+	box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.2);
+}
+
+.navbar-default .navbar-nav li a {
+	text-decoration: none;
+	font-family: 'Montserrat';
+	color: #ffffff;
+	font-size: 14px;
+	text-transform: uppercase;
+	border-radius: 4px;
+	margin-right: 2px;
+	-webkit-transition-duration: 0;
+	transition-duration: 0;
+}
 
 .nav-user {
-  padding: 0 12px !important;
- }
- .nav-user img {
-  height: 32px;
-  width: 32px;
-  float: left;
- }
+	padding: 0 12px !important;
+}
+.nav-user img {
+	height: 32px;
+	width: 32px;
+	float: left;
+}
 
- .justify-content-between {
-  -ms-flex-pack: justify !important;
-  justify-content: space-between !important;
+.justify-content-between {
+	-ms-flex-pack: justify !important;
+	justify-content: space-between !important;
 }
 .d-flex {
-  display: -ms-flexbox !important;
-  display: flex !important;
+	display: -ms-flexbox !important;
+	display: flex !important;
 }
 .nav-sec {
-margin:30px;
-padding: 40px;
-height: 100px;
-border-top: 0px solid grey;
-border-radius: 10px;
-background-color: rgb(83, 83, 83) ;
-box-shadow: 0 -5px 25px 0 #00B5AD;
-color: #ffffff;
+	margin: 30px;
+	padding: 40px;
+	height: 100px;
+	border-top: 0px solid grey;
+	border-radius: 10px;
+	background-color: rgb(83, 83, 83);
+	box-shadow: 0 -5px 25px 0 #00b5ad;
+	color: #ffffff;
 }
 
 .cardbox {
-  border-radius: 20px;
-  background-color: #B9D6E0;
-  box-shadow: 0 5px 25px 0 rgba(123,123,123,.15);
-  margin-bottom: 20px;
-  padding: 20px !important;
+	border-radius: 20px;
+	background-color: #b9d6e0;
+	box-shadow: 0 5px 25px 0 rgba(123, 123, 123, 0.15);
+	margin-bottom: 20px;
+	padding: 20px !important;
 }
 
-  
- .cardbox .cardbox-item {
-    position: relative;
-    display: block;
- }
- .img-responsive{
-    display: block;
-    max-width: 100%;
-    height: auto;
-    border-radius: 50px;
- }
- .fw {
-    width: 100% !important;
-  height: auto;
- }
-  
- .cardbox-base ul{
- margin: 10px !important;
- padding: 10px !important;
- font-size: 0px; 
- text-align: center;
- }
-  
- .cardbox-base li {
-  list-style: none;
-  display: inline-block;
-  margin: 0px 0px 0px -8px !important;
-  padding: 0px 0px 0px 0px !important;
- }
- .cardbox-base li a{
-  margin: 10px !important;
-  padding: 0px !important;
- }
- .cardbox-base li a img{
-  width: 32px;
-  height: 32px;
-  margin: 10px !important;
-  border: 2px solid #fff;
- }
+.cardbox .cardbox-item {
+	position: relative;
+	display: block;
+}
+.img-responsive {
+	display: block;
+	max-width: 100%;
+	height: auto;
+	border-radius: 50px;
+}
+.fw {
+	width: 100% !important;
+	height: auto;
+}
 
- .form-control {
-  position: relative;
-  height: auto;
-  background-color: white !important;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px 10px;
-  font-size: 16px;
-  border-radius: 10px !important;
- }
+.cardbox-base ul {
+	margin: 10px !important;
+	padding: 10px !important;
+	font-size: 0px;
+	text-align: center;
+}
+
+.cardbox-base li {
+	list-style: none;
+	display: inline-block;
+	margin: 0px 0px 0px -8px !important;
+	padding: 0px 0px 0px 0px !important;
+}
+.cardbox-base li a {
+	margin: 10px !important;
+	padding: 0px !important;
+}
+.cardbox-base li a img {
+	width: 32px;
+	height: 32px;
+	margin: 10px !important;
+	border: 2px solid #fff;
+}
+
+.form-control {
+	position: relative;
+	height: auto;
+	background-color: white !important;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px 10px;
+	font-size: 16px;
+	border-radius: 10px !important;
+}
 
 span.emoji {
-  font-size: 30px;
-  vertical-align: middle;
-  line-height: 2;
+	font-size: 30px;
+	vertical-align: middle;
+	line-height: 2;
 }
 
 .mint-blue {
-  background-color: #B9D6E0;
+	background-color: #b9d6e0;
 }
 
 .hide {
-  display: none;
+	display: none;
 }
 
 #share-buttons img {
-  width: 30px;
-  height: 30px;
-  padding: 5px;
-  border: 0;
-  box-shadow: 0;
-  display: inline;
-  }
+	width: 30px;
+	height: 30px;
+	padding: 5px;
+	border: 0;
+	box-shadow: 0;
+	display: inline;
+}
 
- /* Desktop */
- /* @media (max-width: 1024px){
-} */
+/* Tablets */
+@media (max-width: 768px) {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5 {
+		font-family: 'Montserrat';
+		line-height: 1 em !important;
+		margin: calc(2rem - 0.14285714em) 0em 1rem;
+		font-weight: 400 !important;
+		padding: 0em;
+	}
 
- /* Tablets */
- @media (max-width: 768px){
-
- h1,
- h2,
- h3,
- h4,
- h5 {
-font-family: 'Montserrat';
- line-height: 1 em !important;
- margin: calc(2rem -  0.14285714em ) 0em 1rem;
- font-weight: 400 !important;
- padding: 0em;
- }
-
- .nav-sec {
-  margin: 10px 20px 10px 20px;
-  padding: 35px;
-  height: 100px;
-  border-top: 0px solid grey;
-  border-radius: 10px;
-  background-color: rgb(83, 83, 83) ;
-  box-shadow: 0 -5px 25px 0 #00B5AD;;
-  color: #ffffff;
-  }
-
+	.nav-sec {
+		margin: 10px 20px 10px 20px;
+		padding: 35px;
+		height: 100px;
+		border-top: 0px solid grey;
+		border-radius: 10px;
+		background-color: rgb(83, 83, 83);
+		box-shadow: 0 -5px 25px 0 #00b5ad;
+		color: #ffffff;
+	}
 }
 
 /* Mobile phones */
 @media (max-width: 425px) {
+	h3 {
+		font-size: 15px !important;
+	}
+	h1,
+	h2,
+	h4,
+	h5 {
+		font-family: 'Montserrat';
+		line-height: 0.8 em !important;
+		margin: calc(2rem - 0.14285714em) 0em 1rem;
+		font-weight: 300 !important;
+		padding: 0em;
+	}
 
-  h3{
-    font-size: 15px !important;
-  }
- h1,
- h2,
- h4,
- h5 {
-font-family: 'Montserrat';
- line-height: 0.8 em !important;
- margin: calc(2rem -  0.14285714em ) 0em 1rem;
- font-weight: 300 !important;
- padding: 0em;
- }
+	.nav-sec {
+		margin: 10px 10px 10px 10px;
+		padding: 25px;
+		height: 100px !important;
+		border-top: 0px solid grey;
+		border-radius: 10px;
+		background-color: rgb(83, 83, 83);
+		box-shadow: 0 -5px 25px 0 #00b5ad;
+		color: #ffffff;
+	}
 
- .nav-sec {
-  margin: 10px 10px 10px 10px;
-  padding: 25px;
-  height: 100px !important;
-  border-top: 0px solid grey;
-  border-radius: 10px;
-  background-color: rgb(83, 83, 83) ;
-  box-shadow: 0 -5px 25px 0 #00B5AD;;
-  color: #ffffff;
-  }
-
-  .ui.segment {
-    position: relative;
-    background: #ffffff;
-    margin: 0rem 1em;
-    padding: 0em 1em;
-    }
-
+	.ui.segment {
+		position: relative;
+		background: #ffffff;
+		margin: 0rem 1em;
+		padding: 0em 1em;
+	}
 }
