--- a/views/create-activity.handlebars
+++ b/views/create-activity.handlebars
@@ -1,3 +1,4 @@
+{{!-- form to create activity uses multer/cloudinary to post --}}
 <div class="ui middle aligned center aligned grid">
   <div class="column">
     <h3 class="ui center aligned header" id="category-header">Create an activity</h3>
