--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actively Distanced</title>
+
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800'
         rel='stylesheet' type='text/css'>
@@ -21,6 +22,7 @@
         </nav>
     </header>
 
+    {{!-- main nav --}}
     <section class="nav-sec">
         <div class="d-flex justify-content-between">
             <div class="p-2 nav-icon-lg mint-green">
@@ -28,6 +30,7 @@
                     <h3 class="ui white image header"><i class="home icon icon-white"></i>Home</h3>
                 </a>
             </div>
+            {{!-- if the user is logged in then show the ability to add an activity and view their activities --}}
             {{#if loggedIn}}
             <div class="p-2 nav-icon-lg clean-black">
                 <a class="nav-icon" href="/create-activity">
@@ -48,6 +51,7 @@
                         <i class="arrow alternate circle right outline icon icon-white"></i>Logout</h3>
                 </a>
             </div>
+            {{!-- if user is not logged in show login on nav --}}
             {{else}}
             <div class="p-2 nav-icon-lg mint-green">
                 <a class="nav-icon" href="/login">
@@ -60,6 +64,7 @@
     </section>
 
     <div class="wrapper newsfeed">
+        {{!-- homepage handlebars --}}
         <main>
             {{{ body }}}
         </main>
