--- a/views/my-activities.handlebars
+++ b/views/my-activities.handlebars
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="postbox">
             <div class="col-lg-12">
+                {{!-- loop through each activity --}}
                 {{#each activities as |activity|}}
                 <div class="cardbox">
                     <div class="cardbox-heading">
@@ -11,10 +12,7 @@
                                 <div class="media-body">
                                     <h3 class="m-0">{{dataValues.user.dataValues.username}}</h3>
                                     <small><span>{{dataValues.time}} | {{dataValues.date}}</span></small><br>
-                                    <small><span>
-                                            <h5 class="ui color image header">Activity Type:{{dataValues.activity_type}}
-                                            </h5>
-                                        </span></small>
+                                    <h5 class="ui color image header">Activity Type:{{dataValues.activity_type}}</h5>
                                 </div>
                             </div>
                         </div>
@@ -36,6 +34,7 @@
                     <a href="/edit-activity/{{dataValues.id}}">Edit Activity</a>
                     <div class="comments">
                         <h4 class="ui black image header">Comments</h4>
+                        {{!-- loop through each comment for each activity and include the username --}}
                         {{#each comments as |comment|}}
                         <div>
                             <b>{{comment.dataValues.comment_text}}</b> by
@@ -54,12 +53,12 @@
                                 class="ui fluid large teal submit button">Post</button>
                         </div>
                     </form>
+                    {{!-- share to email and facebook --}}
                     <div id="share-buttons">
                         <a
                             href="mailto:?Subject=Join this activity&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://actively-distanced.herokuapp.com/">
                             <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
                         </a>
-                        <!-- Share on Facebook -->
                         <a href="http://www.facebook.com/sharer.php?u=https://actively-distanced.herokuapp.com/"
                             target="_blank">
                             <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
